# conTeXt2ninja

./: .gitignore  README.md  pyproject.toml
c2n/: cli.py  dsl.py
c2n/macros/: baseContext.py  litterateProgramming.py
scripts/: installEditableC2nCommand
